fixed file page spacing

--- a/views/assets/src/helpers/less/customization/pm-task-list.less
+++ b/views/assets/src/helpers/less/customization/pm-task-list.less
@@ -1612,3 +1612,6 @@ form.pm-comment-form-vue.pm-comment-form .message {
 .kbc-kanboard .kbc-table-wrap .kbc-th-wrap .kbc-th .kbc-kanboard-sortable-wrap {
     min-height: 20px;
 }
+.pm-files.pm-files-container-pro {
+    padding: 0;
+}
